--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,1 +1,5 @@
-{"effect.minecraft.unluck": "Covid"}
+{
+  "effect.minecraft.unluck": "Covid",
+  "painting.minecraft.dennis.author": "Sarah Boeving & Akoot_",
+  "painting.minecraft.dennis.title": "Penjamin"
+}
